src/objects/OpportunitySplit.object
<CustomObject>
    <fields>
        <fullName>Amount_Combined_Split__c</fullName>
        <formula>IF( Opportunity.RecordType.DeveloperName = &quot;CPQ_Opportunity&quot;, 
  IF( Opportunity.Annual_Contract_Value__c = 0, 
    Opportunity.Amount,
    Annual_Contract_Value_Split__c
  ),
Opportunity.FC_DBD_Revenue__c * SplitPercentage )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field combines the CPQ and Zoura values together.</inlineHelpText>
        <label>Amount Combined Split</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Contract_Value_Split__c</fullName>
        <formula>Opportunity.Annual_Contract_Value__c * SplitPercentage</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Contract Value - Split</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <externalId>true</externalId>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>